CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(AmdPerfLibrary)

SET(SOURCES
	PerfLib.cpp
)

SET(HEADERS
	PerfLib.h

	GPUPerfAPI.h
	GPUPerfAPIFunctionTypes.h
	GPUPerfAPITypes.h
)

IF(MSVC)
	ADD_DEFINITIONS(/wd4127)
ENDIF(MSVC)

IF(AMD_PERF_LIBRARY_OS_WINDOWS)
	ADD_DEFINITIONS(-DAMD_PERF_API_WINDOWS=1)
ELSEIF(AMD_PERF_LIBRARY_OS_LINUX)
	ADD_DEFINITIONS(-DAMD_PERF_API_LINUX=1 -D_LINUX)
ENDIF()

ADD_LIBRARY(AmdPerfLibrary STATIC ${SOURCES} ${HEADERS})