CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(AmdPerfLibrary)

SET(SOURCES
	PerfLib.cpp
)

SET(HEADERS
	PerfLib.h

	GPUPerfAPI.h
	GPUPerfAPIFunctionTypes.h
	GPUPerfAPITypes.h
)

IF(MSVC)
	ADD_DEFINITIONS(/wd4127)
ENDIF()

IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
	ADD_DEFINITIONS(-DAMD_PERF_API_X64=1)
ELSE()
	ADD_DEFINITIONS(-DAMD_PERF_API_X86=1)
ENDIF()

IF(WIN32)
	ADD_DEFINITIONS(-DAMD_PERF_API_WINDOWS=1)
ELSEIF(UNIX)
	ADD_DEFINITIONS(-DAMD_PERF_API_LINUX=1 -D__linux__)
ENDIF()

ADD_LIBRARY(AmdPerfLibrary STATIC ${SOURCES} ${HEADERS})